--- a/dso/trunk/code/base/buildconfig/distribution/dso-enterprise.def.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/dso-enterprise.def.yml
@@ -30,7 +30,8 @@ bundled_components:
           - thirdpartylicenses
           - disclaimer
           - license
-          - INSTALL          
+          - INSTALL
+          - INSTALL_HIBERNATE_ONLY
   - shared-base:
       documentations:
         install_directory: docs
