--- a/dso/trunk/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -31,6 +31,7 @@ bundled_components:
           - disclaimer
           - license
           - INSTALL
+          - INSTALL_HIBERNATE_ONLY
   - shared-base:
       documentations:
         install_directory: docs
