--- a/dso/trunk/code/base/buildconfig/distribution/dso-enterprise.def.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/dso-enterprise.def.yml
@@ -131,9 +131,12 @@ postscripts:
       args:
         - location: lib/resources/tim-get.properties
         - kit-type:
+            final:
+              org.terracotta.modules.tool.dataFileUrl: http://www.terracotta.org/download/reflector/releases/tim-get/2/index.xml.gz
+              org.terracotta.modules.tool.relativeUrlBase: http://www.terracotta.org/download/reflector/releases        
             stable:
               org.terracotta.modules.tool.dataFileUrl: http://www.terracotta.org/download/reflector/stable/version/tim-get/2/index.xml.gz
-              org.terracotta.modules.tool.relativeUrlBase: http://www.terracotta.org/download/reflector/stable/version     
+              org.terracotta.modules.tool.relativeUrlBase: http://www.terracotta.org/download/reflector/stable/version
   - install-forge-tims:
       args:
         - tim-apache-struts-1.1
