--- a/dso/branches/24million/code/base/common/.classpath
+++ b/dso/branches/24million/code/base/common/.classpath
@@ -15,7 +15,7 @@
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/commons-io-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/commons-lang-2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/commons-logging-1.0.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="/dependencies/lib/concurrent-1.3.4.jar" sourcepath="/home/ssubbiah/.m2/repository/concurrent/concurrent/1.3.4/concurrent-1.3.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="/dependencies/lib/concurrent-1.3.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/hsqldb-1.7.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/je-4.0.92.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/jmxremote-1.0.1_04.jar"/>
@@ -31,5 +31,4 @@
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/trove-1.1-beta-5.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/common-api"/>
 	<classpathentry exported="true" kind="lib" path="lib.tests.unit/tctest-xmlbeans-generated.jar"/>
-	<classpathentry kind="output" path="bin"/>
 </classpath>
