--- a/dso/trunk/code/base/buildconfig/distribution/external-resources.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/external-resources.yml
@@ -8,6 +8,30 @@ default_repos:
   - http://repo1.maven.org/maven2
 
 artifacts:
+# begin ehcache samples
+  - maven_artifact: true
+    groupId: org.terracotta.samples.ehcache
+    artifactId: colorcache
+    classifier: distribution
+    version: 3.3.0-SNAPSHOT
+    type: tar.gz
+    destination: ehcache/samples/colorcache
+    explode: true
+    remove_root_folder: true
+    is_demo: true
+    
+  - maven_artifact: true
+    groupId: org.terracotta.samples.ehcache
+    artifactId: hibernate
+    classifier: distribution
+    version: 3.3.0-SNAPSHOT
+    type: tar.gz
+    destination: ehcache/samples/hibernate
+    explode: true
+    remove_root_folder: true
+    is_demo: true
+# end
+
 # begin EHCACHE
   - maven_artifact: true
     groupId: net.sf.ehcache
@@ -75,3 +99,5 @@ artifacts:
     remove_root_folder: true
     url: http://download.terracotta.org/nightly/quartz/quartz-1.7.3.tar.gz
 # end QUARTZ
+
+
