--- a/update-checker/quartz-update-list.properties
+++ b/update-checker/quartz-update-list.properties
@@ -1,29 +1,36 @@
 ## Top level keys
 # general.notice = This notice should rarely, if ever, be used as everyone running ehcache monitor will see it
 
-## 1.7.3 -- latest release
-1.7.3.updates			= 
-1.7.3.notices			= 1.7.3 is the latest GA release
+## 1.8.0 -- latest release
+1.8.0.updates			= 
+1.8.0.notices			= 1.8.0 is the latest GA release
+1.8.0.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
+
+1.8.0-SNAPSHOT.updates=1.8.0
+
+## 1.7.3
+1.7.3.updates			= 1.8.0
+1.7.3.notices			= We recommend upgrading to 1.8.0, our latest GA release
 1.7.3.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
 
-1.7.3-SNAPSHOT.updates=1.7.3
+1.7.3-SNAPSHOT.updates=1.8.0
 
 
 ## 1.7.2 
-1.7.2.updates			= 1.7.3
-1.7.2.notices			= We recommend upgrading to 1.7.3, our latest GA release
+1.7.2.updates			= 1.8.0
+1.7.2.notices			= We recommend upgrading to 1.8.0, our latest GA release
 1.7.2.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
-1.7.2-SNAPSHOT.updates = 1.7.3
+1.7.2-SNAPSHOT.updates = 1.8.0
 
 ## 1.7.1
-1.7.1.updates			= 1.7.3
-1.7.1.notices			= We recommend upgrading to 1.7.3, our latest GA release
+1.7.1.updates			= 1.8.0
+1.7.1.notices			= We recommend upgrading to 1.8.0, our latest GA release
 1.7.1.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
-1.7.1-SNAPSHOT.updates = 1.7.3
+1.7.1-SNAPSHOT.updates = 1.8.0
 
 ## 1.7.0 -- latest release
-1.7.0.updates			= 1.7.3
-1.7.0.notices			= We recommend upgrading to 1.7.3, our latest GA release
+1.7.0.updates			= 1.8.0
+1.7.0.notices			= We recommend upgrading to 1.8.0, our latest GA release
 1.7.0.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
-1.7.0-SNAPSHOT.updates = 1.7.3
+1.7.0-SNAPSHOT.updates = 1.8.0
 
