--- a/dso/branches/new-tim-api/code/base/buildconfig/distribution/external-resources.yml
+++ b/dso/branches/new-tim-api/code/base/buildconfig/distribution/external-resources.yml
@@ -93,11 +93,11 @@ artifacts:
 
 # begin QUARTZ
   - maven_artifact: false
-    name: quartz-1.7.3.tar.gz
+    name: quartz-1.8.0.tar.gz
     destination: quartz 
     explode: true
     remove_root_folder: true
-    url: http://download.terracotta.org/nightly/quartz/quartz-1.7.3.tar.gz
+    url: http://download.terracotta.org/quartz/quartz-1.8.0.tar.gz
 # end QUARTZ
 
 
