--- a/update-checker/update-list.properties
+++ b/update-checker/update-list.properties
@@ -5,48 +5,58 @@
 # general.notice = This notice should rarely, if ever, be used as everyone running the console\nwill see it
 
 
-## 3.7.2 -- latest release 
-3.7.2.updates			= 
-3.7.2.notices			= 3.7.2 is the latest GA release from Terracotta
+## 3.7.3 -- latest release 
+3.7.3.updates			= 
+3.7.3.notices			= 3.7.3 is the latest GA release from Terracotta
+3.7.3.release-notes	= http://www.terracotta.org/confluence/display/release/Terracotta+3.7
+
+## 3.7.2
+3.7.2.updates			= 3.7.3
+3.7.2.notices			= 3.7.3 is the latest GA release from Terracotta
 3.7.2.release-notes	= http://www.terracotta.org/confluence/display/release/Terracotta+3.7
 
 ## 3.7.0 
-3.7.0.updates			= 
-3.7.0.notices			= 3.7.2 is the latest GA release from Terracotta
+3.7.0.updates			= 3.7.3
+3.7.0.notices			= 3.7.3 is the latest GA release from Terracotta
 3.7.0.release-notes	= http://www.terracotta.org/confluence/display/release/Terracotta+3.7
 
+## 3.6.6
+3.6.6.updates			= 3.7.3
+3.6.6.notices			= 3.7.3 is the latest GA release from Terracotta
+3.6.6.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
+ 
 ## 3.6.5
-3.6.5.updates			= 3.7.2
-3.6.5.notices			= 3.7.2 is the latest GA release from Terracotta
+3.6.5.updates			= 3.7.3
+3.6.5.notices			= 3.7.3 is the latest GA release from Terracotta
 3.6.5.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
  
 
 ## 3.6.4
-3.6.4.updates			= 3.7.2
-3.6.4.notices			= 3.7.2 is the latest GA release from Terracotta
+3.6.4.updates			= 3.7.3
+3.6.4.notices			= 3.7.3 is the latest GA release from Terracotta
 3.6.4.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
 
 ## 3.6.3
 3.6.3.updates			= 
-3.6.3.notices			= 3.7.2 is the latest GA release from Terracotta
+3.6.3.notices			= 3.7.3 is the latest GA release from Terracotta
 3.6.3.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
 
 
 ## 3.6.2
-3.6.2.updates			= 3.7.2
-3.6.2.notices			= 3.7.2 is the latest GA release from Terracotta
+3.6.2.updates			= 3.7.3
+3.6.2.notices			= 3.7.3 is the latest GA release from Terracotta
 3.6.2.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
 
 
 ## 3.6.1 
-3.6.1.updates			= 3.7.2
-3.6.1.notices			= 3.7.2 is the latest GA release from Terracotta
+3.6.1.updates			= 3.7.3
+3.6.1.notices			= 3.7.3 is the latest GA release from Terracotta
 3.6.1.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
 
 
 ## 3.6.0
-3.6.0.updates			= 3.7.2
-3.6.0.notices			= 3.7.2 is the latest GA release from Terracotta
+3.6.0.updates			= 3.7.3
+3.6.0.notices			= 3.7.3 is the latest GA release from Terracotta
 3.6.0.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
 
 
