--- a/update-checker/update-list.properties
+++ b/update-checker/update-list.properties
@@ -5,58 +5,64 @@
 # general.notice = This notice should rarely, if ever, be used as everyone running the console\nwill see it
 
 
-## 3.7.3 -- latest release 
-3.7.3.updates			= 
-3.7.3.notices			= 3.7.3 is the latest GA release from Terracotta
+## 3.7.4 -- latest release 
+3.7.4.updates			= 
+3.7.4.notices			= 3.7.4 is the latest GA release from Terracotta
+3.7.4.release-notes	= http://www.terracotta.org/confluence/display/release/Terracotta+3.7
+
+
+## 3.7.3
+3.7.3.updates			= 3.7.4
+3.7.3.notices			= 3.7.4 is the latest GA release from Terracotta
 3.7.3.release-notes	= http://www.terracotta.org/confluence/display/release/Terracotta+3.7
 
 ## 3.7.2
-3.7.2.updates			= 3.7.3
-3.7.2.notices			= 3.7.3 is the latest GA release from Terracotta
+3.7.2.updates			= 3.7.4
+3.7.2.notices			= 3.7.4 is the latest GA release from Terracotta
 3.7.2.release-notes	= http://www.terracotta.org/confluence/display/release/Terracotta+3.7
 
 ## 3.7.0 
-3.7.0.updates			= 3.7.3
-3.7.0.notices			= 3.7.3 is the latest GA release from Terracotta
+3.7.0.updates			= 3.7.4
+3.7.0.notices			= 3.7.4 is the latest GA release from Terracotta
 3.7.0.release-notes	= http://www.terracotta.org/confluence/display/release/Terracotta+3.7
 
 ## 3.6.6
-3.6.6.updates			= 3.7.3
-3.6.6.notices			= 3.7.3 is the latest GA release from Terracotta
+3.6.6.updates			= 3.7.4
+3.6.6.notices			= 3.7.4 is the latest GA release from Terracotta
 3.6.6.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
  
 ## 3.6.5
-3.6.5.updates			= 3.7.3
-3.6.5.notices			= 3.7.3 is the latest GA release from Terracotta
+3.6.5.updates			= 3.7.4
+3.6.5.notices			= 3.7.4 is the latest GA release from Terracotta
 3.6.5.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
  
 
 ## 3.6.4
-3.6.4.updates			= 3.7.3
-3.6.4.notices			= 3.7.3 is the latest GA release from Terracotta
+3.6.4.updates			= 3.7.4
+3.6.4.notices			= 3.7.4 is the latest GA release from Terracotta
 3.6.4.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
 
-## 3.6.3
-3.6.3.updates			= 
-3.6.3.notices			= 3.7.3 is the latest GA release from Terracotta
-3.6.3.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
+## 3.7.4
+3.7.4.updates			= 
+3.7.4.notices			= 3.7.4 is the latest GA release from Terracotta
+3.7.4.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
 
 
 ## 3.6.2
-3.6.2.updates			= 3.7.3
-3.6.2.notices			= 3.7.3 is the latest GA release from Terracotta
+3.6.2.updates			= 3.7.4
+3.6.2.notices			= 3.7.4 is the latest GA release from Terracotta
 3.6.2.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
 
 
 ## 3.6.1 
-3.6.1.updates			= 3.7.3
-3.6.1.notices			= 3.7.3 is the latest GA release from Terracotta
+3.6.1.updates			= 3.7.4
+3.6.1.notices			= 3.7.4 is the latest GA release from Terracotta
 3.6.1.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
 
 
 ## 3.6.0
-3.6.0.updates			= 3.7.3
-3.6.0.notices			= 3.7.3 is the latest GA release from Terracotta
+3.6.0.updates			= 3.7.4
+3.6.0.notices			= 3.7.4 is the latest GA release from Terracotta
 3.6.0.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.6%2C+Ehcache+2.5%2C+Quartz+2.1
 
 
@@ -88,69 +94,69 @@
 3.5.0.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.5.0
 
 ## 3.4.1 
-3.4.1.updates			= 3.6.3
-3.4.1.notices			= Terracotta recommends upgrading to the latest release, 3.6.3, for best results
-3.4.1.release-notes	= http://www.terracotta.org/confluence/display/release/Terracotta+3.6.3+Release+Notes
+3.4.1.updates			= 3.7.4
+3.4.1.notices			= Terracotta recommends upgrading to the latest release, 3.7.4, for best results
+3.4.1.release-notes	= http://www.terracotta.org/confluence/display/release/Terracotta+3.7.4+Release+Notes
 
 ## 3.4.0
-3.4.0.updates			= 3.6.3
-3.4.0.notices			= Terracotta recommends upgrading to the latest release, 3.6.3, for best results
+3.4.0.updates			= 3.7.4
+3.4.0.notices			= Terracotta recommends upgrading to the latest release, 3.7.4, for best results
 3.4.0.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.4.1
 
 ## 3.3.0
-3.3.0.updates			= 3.6.3
-3.3.0.notices			= Terracotta recommends upgrading to the latest release, 3.6.3, for best results
+3.3.0.updates			= 3.7.4
+3.3.0.notices			= Terracotta recommends upgrading to the latest release, 3.7.4, for best results
 3.3.0.release-notes	= http://www.terracotta.org/confluence/display/release/Release+Notes+Terracotta+3.3.0+Ehcache+2.2.0
 
 ## 3.2.1
-3.2.1.updates			= 3.6.3
-3.2.1.notices			= Terracotta recommends upgrading to the latest release, 3.6.3, for best results
+3.2.1.updates			= 3.7.4
+3.2.1.notices			= Terracotta recommends upgrading to the latest release, 3.7.4, for best results
 3.2.1.release-notes	= http://www.terracotta.org/confluence/display/docs321/Release+Notes
 
 ## 3.2.0 
-3.2.0.updates 		= 3.6.3
-3.2.0.notices		= Terracotta recommends upgrading to the latest release, 3.6.3, for best results
+3.2.0.updates 		= 3.7.4
+3.2.0.notices		= Terracotta recommends upgrading to the latest release, 3.7.4, for best results
 3.2.0.release-notes	= http://www.terracotta.org/confluence/display/docs32/Release+Notes
 ## 3.1.1 
-3.1.1.updates			= 3.6.3
-3.1.1.notices			= Terracotta recommends upgrading to the latest releaes, 3.6.3, for best results
+3.1.1.updates			= 3.7.4
+3.1.1.notices			= Terracotta recommends upgrading to the latest releaes, 3.7.4, for best results
 3.1.1.release-notes	= http://www.terracotta.org/confluence/display/docs31/Home
 
 ## 3.1.0 
-3.1.0.updates			= 3.6.3
-3.1.0.notices			= Terracotta recommends upgrading to the latest release, 3.6.3, for best results
+3.1.0.updates			= 3.7.4
+3.1.0.notices			= Terracotta recommends upgrading to the latest release, 3.7.4, for best results
 3.1.0.release-notes	= http://www.terracotta.org/confluence/display/docs31/Home
 
 
 ## 3.0.1 -- 
-3.0.1.updates			= 3.6.3
-3.0.1.notices			= Terracotta recommends upgrading to the latest stable build, 3.6.3, for best results
+3.0.1.updates			= 3.7.4
+3.0.1.notices			= Terracotta recommends upgrading to the latest stable build, 3.7.4, for best results
 3.0.1.release-notes	= http://www.terracotta.org/confluence/display/docs30/Home
 
 ## 3.0.0 -- 
-3.0.0.updates			= 3.6.3
-3.0.0.notices			= Terracotta recommends upgrading to the latest stable build, 3.6.3, for best results
+3.0.0.updates			= 3.7.4
+3.0.0.notices			= Terracotta recommends upgrading to the latest stable build, 3.7.4, for best results
 3.0.0.release-notes	= http://www.terracotta.org/confluence/display/docs31/Home
 
 
 ## 2.7.3 -- Latest 2.7 version
-2.7.3.updates			= 3.6.3
-2.7.3.notices			= This is the latest 2.7 Terracotta version. 3.6.3 is the latest release
+2.7.3.updates			= 3.7.4
+2.7.3.notices			= This is the latest 2.7 Terracotta version. 3.7.4 is the latest release
 2.7.3.release-notes	=  http://www.terracotta.org/confluence/display/docs27/Home
 
 ## 2.7.2
-2.7.2.updates			= 3.6.3
-2.7.2.notices			= Terracotta recommends upgrading to the latest release, 3.6.3, for best results
+2.7.2.updates			= 3.7.4
+2.7.2.notices			= Terracotta recommends upgrading to the latest release, 3.7.4, for best results
 2.7.2.release-notes	=  http://www.terracotta.org/confluence/display/docs27/Home
 
 ## 2.7.1
-2.7.1.updates			= 3.6.3
-2.7.1.notices			= Terracotta recommends upgrading to the latest release, 3.6.3, for best results
+2.7.1.updates			= 3.7.4
+2.7.1.notices			= Terracotta recommends upgrading to the latest release, 3.7.4, for best results
 2.7.1.release-notes	=  http://www.terracotta.org/confluence/display/docs27/Home
 
 ## 2.7.0 
-2.7.0.updates			= 3.6.3
-2.7.0.notices			= Terracotta recommends upgrading to the latest release, 3.6.3, for best results
+2.7.0.updates			= 3.7.4
+2.7.0.notices			= Terracotta recommends upgrading to the latest release, 3.7.4, for best results
 2.7.0.release-notes	=  http://www.terracotta.org/confluence/display/docs27/Home
 
 
