--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -65,6 +65,13 @@ default.BigMemoryEhcache=http://www.ehcache.org/documentation/bigmemory/index
 default.BigMemoryBetaLicenseKey=http://www.terracotta.org
 default.BigMemoryReleaseNotes=http://www.terracotta.org/confluence/display/release/BigMemory+Go+3.7+Release+Notes
 
+### TMS 4.0
+4.0.TMSsecurity=http://terracotta.org/documentation/tms/tms-security
+4.0.TMSevents=http://terracotta.org/documentation/bigmemorymax/terracotta-server-array/operations#cluster-events
+4.0.RestoreBackup=http://terracotta.org/documentation/bigmemorymax/terracotta-server-array/operations#restore-backup
+4.0.TSAconfig=http://terracotta.org/documentation/bigmemorymax/terracotta-server-array/config-reference
+4.0.TSAsecurity=http://terracotta.org/documentation/bigmemorymax/terracotta-server-array/managing-security
+
 ### BigMemory Go 4.0
 4.0.BMGTechFaq=http://terracotta.org/documentation/bigmemorygo/technical-faq
 4.0.BMGGetStarted=http://terracotta.org/documentation/bigmemorygo/get-started
